# Website

./: .Dockerfile  .cursorrules  .dockerignore  .env.example  .gitignore  .railwayignore  DOCKER.md  Dockerfile  Procfile  README.md  SMK-BUILD-README.md  app.py  build-and-deploy.sh  database.py  docker-compose.dev.yml  docker-compose.yml  fix_listings.py  fix_navbar.py  forms.py  index_update.txt  investor_services_fix.sh  investor_services_updates.txt  main.py  nixpacks.toml  package-lock.json  pyproject.toml  quick-build.sh  railway.json  rental_application_fix.html  requirements.txt  reset_db.py  template_tags.txt  update_database.py
attached_assets/: Pasted--About-Vector-New-York-New-York-Leasing-Reimagined-Where-Happy-Tenants-and-Successful-Owners-G-1744643072650.txt  Pasted--DOCTYPE-html-html-lang-en-head-meta-charset-UTF-8-meta-name-viewport-content-1743611723704.txt  Pasted--data-actual-rent-17500-address-525-East-72nd-Street-address-id-242--1744300133982.txt  Pasted-About-Vector-New-York-Leasing-Reimagined-for-Owners-Built-to-Impress-Designed-to-Deliver-At-Vecto-1744171899867.txt  Pasted-SECTION-1-Introduction-Vector-New-York-s-Vision-1-Opening-Statement-Welcome-to-Vector-New-Yo-1743612984030.txt  Pasted-for-the-chatbot-the-endpoint-is-https-openai-reccomendation-system-fly-dev-chat-the-initial-data--1743705587144.txt
scripts/: build-smk.sh  dev-local.sh  run-local-docker.sh
templates/: 404.html  500.html  about.html  apply.html  base.html  base.html.backup  base.html.bak  base.html.fixed  base.html.new  chat_modal.html  contact.html  contact_form.html  (+13 more)
(+42 files in other folders)
