[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "flask-wtf>=1.2.2",
    "gunicorn>=23.0.0",
    "markdown2>=2.5.3",
    "mysql-connector-python>=9.2.0",
    "replit>=4.1.1",
    "requests>=2.32.3",
    "sendgrid>=6.11.0",
    "trafilatura>=2.0.0",
    "werkzeug>=3.1.3",
    "wtforms>=3.2.1",
]
